[package]
name = "rust_ipc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zbus = "3.14.1"
async-std = {version = "1.12.0", features = ["attributes"]}
futures-util = "0.3"
event-listener = "4.0.2"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"